--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redis": "2.8.0",
     "request": "2.74.0",
     "session-file-store": "1.0.0",
+    "twitter": "1.7.1",
     "wicked-sdk": "file:wicked-sdk.tgz"
   },
   "jshintConfig": {
