--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jade": "1.11.0",
     "jquery": "^1.11.3",
     "jsonwebtoken": "5.7.0",
+    "ldapjs": "1.0.2",
     "morgan": "1.7.0",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
@@ -56,6 +57,7 @@
     "portal-env": "file:../portal-env-1.0.0.tgz",
     "redis": "2.8.0",
     "request": "2.74.0",
+    "saml2-js": "2.0.3",
     "session-file-store": "1.0.0",
     "twitter": "1.7.1",
     "wicked-sdk": "file:wicked-sdk.tgz"
