--- a/package.json
+++ b/package.json
@@ -35,19 +35,18 @@
   "dependencies": {
     "@types/node": "^10.3.2",
     "async": "2.6.1",
-    "body-parser": "1.15.2",
+    "body-parser": "1.18.3",
     "bootstrap": "3.3.7",
     "connect-redis": "3.3.2",
     "cookie-parser": "1.4.3",
     "cors": "2.7.1",
-    "debug": "2.2.0",
-    "express": "4.15.3",
-    "express-session": "1.15.3",
+    "express": "4.16.3",
+    "express-session": "1.15.6",
     "jade": "1.11.0",
-    "jquery": "^1.11.3",
+    "jquery": "3.3.1",
     "jsonwebtoken": "5.7.0",
     "ldapjs": "1.0.2",
-    "morgan": "1.7.0",
+    "morgan": "1.9.0",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
     "passport-github2": "0.1.10",
@@ -56,7 +55,7 @@
     "passport-twitter": "1.0.4",
     "portal-env": "file:../portal-env-1.0.0.tgz",
     "redis": "2.8.0",
-    "request": "2.74.0",
+    "request": "2.87.0",
     "saml2-js": "2.0.3",
     "session-file-store": "1.0.0",
     "twitter": "1.7.1",
