--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "5.7.0",
     "ldapjs": "1.0.2",
     "morgan": "1.9.0",
+    "mustache": "2.2.1",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
     "passport-github2": "0.1.10",
