--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/node": "^10.3.2",
     "async": "2.6.1",
     "body-parser": "1.18.3",
-    "bootstrap": "3.4.0",
+    "bootstrap": "^4.2.1",
     "connect-redis": "3.3.2",
     "cookie-parser": "1.4.3",
     "cors": "2.7.1",
@@ -50,6 +50,7 @@
     "morgan": "1.9.0",
     "mustache": "2.2.1",
     "nocache": "^2.0.0",
+    "node-sass-middleware": "^0.11.0",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
     "passport-github2": "0.1.10",
