--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wicked.portal-auth",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "description": "wicked.haufe.io Authorization Server",
   "main": "bin/authz",
   "scripts": {
