--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wicked.portal-auth",
   "version": "1.0.0-rc.4",
   "description": "wicked.haufe.io Authorization Server",
-  "main": "bin/authz",
+  "main": "dist/authz.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./build-typescript.sh",
@@ -68,6 +68,7 @@
     "esversion": 6
   },
   "devDependencies": {
-    "@types/async": "2.0.49"
+    "@types/async": "2.0.49",
+    "typescript": "^3.4.1"
   }
 }
