--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express-session": "1.15.6",
     "jade": "1.11.0",
     "jquery": "3.3.1",
+    "json-stringify-safe": "5.0.1",
     "jsonwebtoken": "5.7.0",
     "morgan": "1.9.1",
     "mustache": "2.2.1",
